classDiagram
    App --> ViewModel
    App --> CosmosItemRepository
    CosmosItemRepository --> Item
    CosmosItemRepository --> CosmosClient
    class App {
        index:(/)
        add_to_do:(/add)
        complete_to_do:(/complete)
        uncomplete_to_do:(/uncomplete)
        delete_to_do:(/delete)
    }
    class CosmosItemRepository {
        get_items()
        add_item()
        update_status()
        delete_item()
    }
    class Item {
        id
        title
        description
        due_date
        last_modified
        status
        from_trello_card()
        items_from_trello_lists()
    }
    class CosmosClient {
        list_items()
        create_item()
        update_item()
        delete_item()
    }
    class ViewModel {
        items
        done_items
        recent_done_items
        older_done_items
        not_started_items
        should_show_all_done_items
    }
